Fix T63386: text editor footer added multiple times.

Differential Revision: https://developer.blender.org/D4663